hoan thanh xu ly lap ke hoach dat hang